public/Assets/CSS/style.css
/* ... */
.main-text {
  position: absolute;
  top: 50px;
  width: 96.66666666666666%;
  color: #FFF;
}

.btn-min-block {
  min-width: 170px;
  line-height: 26px;
}

.btn-clear {
  color: #FFF;
  background-color: transparent;
  border-color: #FFF;
  margin-right: 15px;
}

.btn-clear:hover {
  color: #000;
  background-color: #FFF;
}

.sectionWidth {
  max-width: 1440px !important;
}

.tallImage {
  width: 160px;
}

.demo-card-square.mdl-card {
  width: 423px;
  height: 310px;
}

.centerContent {
  max-width: 1220px;
  width: 100%;
}

@media (max-width: 767px) {
  .centerContent {
    max-width: 400px;
    width: 100%;
  }
}

.demo-card-square>.mdl-card__title {
  color: #fff;
  /*background: url('http://www.conprmetidos.org/wp-content/uploads/2017/10/Logo-Footer-300x69.jpg') bottom right 15% no-repeat #FFFFFF;*/
  background-repeat: no-repeat;
}

.mdl-card__supporting-text {
  text-align: start;
  font-size: 16px;
  height: 200px;
  width: 100%;
  /*height: 201px;*/
}

.roundedImage {
  width: 165px;
  height: 165px;
  margin-bottom: 20px;
  border-radius: 50%;
}

.aboutDescription {
  font-size: 17px;
  font-weight: 300;
  line-height: 1.5;
  color: #333;
  text-align: left;
}

.modalContent {
  width: 100%;
  height: 100%;
}

@media (max-width: 756px) {
  .modalContent {
    width: 100vw;
    height: 100%;
  }
}

@media (max-width: 756px) {
  .modal-dialog {
    padding: 0 !important;
    margin: 0;
  }
}

.modal-header {}

.center {
  display: flex;
  justify-content: center;
}

.moreSize {
  font-size: 24px!important;
  word-break: break-all;
}

body.modal-open {
  overflow: visible;
}

.qrImage {
  max-width: 540px;
  width: 100%;
  height: 100%;
  max-height: 540px;
}

.modalFont {
  font-size: 45px;
  font-weight: 300;
  line-height: 1.6;
}

/*body.modal-open {
    overflow: visible;
}*/

.aboutHeader {
  font-size: 25px;
  font-weight: 300;
  text-align: left;
      margin-bottom: 12px;
}

.paragraphFAQ {
  margin-bottom: 40px;
  color: black;
  font-size: 17px;
  font-weight: 300;
  font-style: 300;
  line-height: 1.5;
  text-align: left;
}

.paragraphFAQLast {
  margin-bottom: 0 !important;
}

.mdlCardButton {
  background-color: transparent;
  color: #212121;
}

.mdl-card__actions {
  display: flex;
  justify-content: flex-end;
}

.rowFull {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: flex-end;
}

.buttonColumn {
  padding: 0;
}

.mdl-card__title-text {
  text-align: start;
}

.mainButton {
  color: #2979FF !important;
}

.hightlight {
  font-weight: 500 !important;
  color: #2979FF !important;
}

a:focus, a:hover {
  color: #23527c;
  text-decoration: none;
}

.aboutCard1 {
  background-color: #E9A43A !important;
}

.aboutCard2 {
  background-color: #FF8C21 !important;
}

.aboutCard3 {
  background-color: #980029!important;
}

.aboutCard4 {
  background-color: #00A8E0!important;
}

.creditText {
  top: 10px;
  right: 16px;
  font-size: 18px;
  color: white;
  font-size: 10px;
  position: absolute;
}

.creditText2 {
  top: 30px;
  right: 16px;
  font-size: 18px;
  color: white;
  font-size: 10px;
  position: absolute;
  width: 200px;
  height: 0;
}

@media (max-width: 626px) {
  .creditText {
    font-size: 4px;
    margin-top: -10px;
  }
}

.mdl-button-raised:visited {
  color: #4CAF50;
}

.socialIcons {
  width: 48px;
  height: auto;
}

.socialIcons:active {
  opacity: 0.5 !important;
}

.socialImage:hover {
  position: relative;
  filter: brightness(50%) !important;
}

.socialImage:active, {
  filter: brightness(50%) !important;
}

.socialImage:hover:after {
  content: url(../IMG/cndaokvdqbqrwcfnswes.png);
  /* no need for qoutes */
  display: block;
  position: absolute;
  left: 200;
  top: 40;
}

.socialImage {
   transition: filter 0.5s ease;
   filter: brightness(100%);
}

.rowNews {
  margin-top: 40px;
}

.imageNews {
  width: 100% !important;
  max-width: 512px;
}

